fix double border

--- a/resources/css/posts.css
+++ b/resources/css/posts.css
@@ -100,8 +100,10 @@ hr {
     color: LightGrey;
 }
 
-#outline-container-sec- {
-    margin: 0 auto;
-    max-width: 700px;
+.post-content {
+    margin: 50px auto 0;
+    padding: 5px 50px;
+    max-width: 840px;
     text-align: justify;
+    border: 1px solid LightGrey;
 }
